[package]
name = "bitcoin-compiler"
version = "0.1.0"
edition = "2021"
authors = ["Bitcoin Compiler App"]
description = "Compile Bitcoin Core and Electrs from source on macOS"

[[bin]]
name = "bitcoin-compiler"
path = "src/main.rs"

[dependencies]
# GUI framework — eframe/egui immediate-mode GUI with Metal on macOS.
eframe = { version = "0.28", default-features = false, features = [
    "default_fonts",
    "wgpu",
    "accesskit",
] }
egui = "0.28"

# Async runtime — only the subsystems we actually use.
tokio = { version = "1", features = [
    "rt-multi-thread",
    "sync",
    "time",
    "io-util",
    "process",
    "macros",
] }

# HTTP client for GitHub API
reqwest = { version = "0.12", default-features = false, features = [
    "json",
    "rustls-tls",
] }

# Serialization
serde = { version = "1", features = ["derive"] }

# Regex for version parsing (compiled once via LazyLock)
regex = { version = "1", default-features = false, features = ["std"] }

# Structured error handling
anyhow = "1"

# Native file picker (NSOpenPanel on macOS)
rfd = "0.14"

# ── macOS bundle metadata ──────────────────────────────────────────────────────
[package.metadata.bundle]
name           = "Bitcoin Compiler"
identifier     = "com.bitcoincompiler.app"
icon           = []
version        = "0.1.0"
copyright      = "Copyright 2024"
category       = "developer-tool"
short_description = "Compile Bitcoin Core and Electrs from source on macOS"

# ── Release profile ────────────────────────────────────────────────────────────
[profile.release]
opt-level     = 3
lto           = "thin"
strip         = true
# codegen-units = 1 is removed: it conflicts with thin LTO and slows
# incremental builds without measurable benefit alongside thin LTO.
